--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   linkedin: https://linkedin.com/in/satish-babariya/
 
 topics:
