--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ projects:
 
 social_media:
   linkedin: https://linkedin.com/in/satish-babariya/
+  twitter: https://twitter.com/ej_satyo
 
 topics:
   - name: TypeScript
